; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/ralink/extr_early_printk.c_soc_is_mt7628.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/ralink/extr_early_printk.c_soc_is_mt7628.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONFIG_SOC_MT7620 = common dso_local global i32 0, align 4
@chipid_membase = common dso_local global i32 0, align 4
@MT7628_CHIP_NAME1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @soc_is_mt7628 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @soc_is_mt7628() #0 {
  %1 = load i32, i32* @CONFIG_SOC_MT7620, align 4
  %2 = call i64 @IS_ENABLED(i32 %1)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @chipid_membase, align 4
  %6 = call i64 @__raw_readl(i32 %5)
  %7 = load i64, i64* @MT7628_CHIP_NAME1, align 8
  %8 = icmp eq i64 %6, %7
  br label %9

9:                                                ; preds = %4, %0
  %10 = phi i1 [ false, %0 ], [ %8, %4 ]
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local i64 @IS_ENABLED(i32) #1

declare dso_local i64 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
